Fix the alignment issue in headings

--- a/src/Components/HomeDown/Common.css
+++ b/src/Components/HomeDown/Common.css
@@ -2,6 +2,5 @@
     font-size: 24px;
     color: black;
     font-weight: bold;
-    height: 20px;
     flex-grow: 11;
 }
