--- a/src/Components/HomeDown/JobPosting/Jobs.css
+++ b/src/Components/HomeDown/JobPosting/Jobs.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 20px;
+    height: 30%;
     justify-content: space-between;
 }
 .all-job-offer-link-container{
